# MailManager

./: .gitignore  README.md  optional_updates.py
backend/: Insomnia_2025-07-10.yaml
backend/app_common/: pyproject.toml
backend/app_common/src/app_common/: enums.py  logger.py  pagination.py  schemas.py
backend/mail_manager/mail_manager/: pyproject.toml
backend/mail_manager/mail_manager/src/: run.py
backend/mail_manager/mail_manager/src/mail_manager/: main.py  settings.py
backend/mail_manager/mail_manager/src/mail_manager/api/v1/: exceptions.py  mail_manager_api.py
backend/mail_manager/mail_manager/src/mail_manager/core/v1/: database.py  models.py
backend/mail_manager/mail_manager/src/mail_manager/core/v1/crud/: mail_items_crud.py
backend/mail_manager/mail_manager_sdk/: pyproject.toml
backend/mail_manager/mail_manager_sdk/src/mail_manager_sdk/: client.py  exceptions.py  settings.py
backend/notifier/notifier/: pyproject.toml
backend/notifier/notifier/src/: run.py
backend/notifier/notifier/src/notifier/: exceptions.py  main.py  settings.py
backend/notifier/notifier/src/notifier/core/v1/: notifier.py
backend/notifier/notifier/src/notifier/core/v1/notifiers/: abstract_notifier.py  email_notifier.py
frontend/: index.html  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/Components/: Cell.tsx  Table.tsx
frontend/src/MainLayout/: MainLayout.css  MainLayout.tsx
frontend/src/Router/: Router.tsx
frontend/src/Services/api/: configApi.tsx
frontend/src/Services/defaults/: apiDefaults.tsx  configDefaults.tsx  formDefaults.tsx  stateDefaults.tsx
frontend/src/Services/models/: configModels.tsx
frontend/src/Store/: Store.tsx
frontend/src/Store/actions/: configActions.tsx
frontend/src/Store/reducers/: configReducer.tsx
frontend/src/TraigeDashboard/: TriageDashboard.tsx  TriageDashboardTable.tsx
