[project]
name = "app_common"
version = "0.0.1"
description = ""
authors = []
dependencies = ["email-validator>=2.2.0", "loguru>=0.7.3", "fastapi-pagination>=0.13.2"]
requires-python = "==3.11.*"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
