[project]
name = "mail_manager"
version = "0.0.1"
description = "Mail Manager"
authors = []
dependencies = [
    "fastapi>=0.111.0",
    "sqlalchemy>=2.0.30",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.2.1",
    "fastapi-pagination>=0.12.25",
    "sqlakeyset>=2.0.1716332987",
]
requires-python = "==3.11.*"

[tool.pdm.scripts]
start = {cmd = "python src/run.py"}

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../../app_common#egg=app_common",
]

[tool.pdm]
distribution = false
