[project]
name = "mail_manager_sdk"
version = "0.0.1"
description = ""
authors = []
dependencies = [
    "requests>=2.31.0",
]

requires-python = "==3.11.*"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../../app_common#egg=app_common",
]
