[project]
name = "notifier"
version = "0.0.1"
description = ""
authors = [
    {name = "Zac Romick", email = "zac.romick@gmail.com"},
]
dependencies = [
    "pydantic-settings>=2.3.4",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "sendgrid>=6.11.0",
    "email-validator>=2.2.0",
]
requires-python = "==3.11.*"

[tool.pdm.scripts]
start = {cmd = "python src/run.py"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../../mail_manager/mail_manager_sdk#egg=mail_manager_sdk",
    "-e file:///${PROJECT_ROOT}/../../app_common#egg=app_common",
]
